// Vitest Snapshot v1

exports[`getTitreFromTypeId fusions 1`] = `
{
  "apc": null,
  "aph": null,
  "apm": null,
  "apw": null,
  "arc": null,
  "arg": null,
  "arm": null,
  "axm": {
    "count": "single",
    "typeId": "arm",
  },
  "cxf": {
    "count": "multiple",
    "typeId": "cxf",
  },
  "cxg": {
    "count": "multiple",
    "typeId": "cxg",
  },
  "cxh": {
    "count": "multiple",
    "typeId": "cxh",
  },
  "cxi": {
    "count": "multiple",
    "typeId": "cxi",
  },
  "cxm": {
    "count": "multiple",
    "typeId": "cxm",
  },
  "cxr": {
    "count": "multiple",
    "typeId": "cxr",
  },
  "cxs": {
    "count": "multiple",
    "typeId": "cxs",
  },
  "cxw": {
    "count": "multiple",
    "typeId": "cxw",
  },
  "inh": null,
  "ini": null,
  "inm": null,
  "inr": null,
  "pcc": null,
  "prf": null,
  "prg": null,
  "prh": null,
  "pri": null,
  "prm": null,
  "prr": null,
  "prs": null,
  "prw": null,
  "pxf": null,
  "pxg": null,
  "pxh": null,
  "pxi": null,
  "pxm": {
    "count": "single",
    "typeId": "prm",
  },
  "pxr": null,
  "pxw": null,
}
`;

exports[`getTitreFromTypeId pas de fusions 1`] = `
{
  "apc": null,
  "aph": null,
  "apm": null,
  "apw": null,
  "arc": null,
  "arg": null,
  "arm": null,
  "axm": {
    "count": "single",
    "typeId": "arm",
  },
  "cxf": null,
  "cxg": null,
  "cxh": null,
  "cxi": null,
  "cxm": null,
  "cxr": null,
  "cxs": null,
  "cxw": null,
  "inh": null,
  "ini": null,
  "inm": null,
  "inr": null,
  "pcc": null,
  "prf": null,
  "prg": null,
  "prh": null,
  "pri": null,
  "prm": null,
  "prr": null,
  "prs": null,
  "prw": null,
  "pxf": null,
  "pxg": null,
  "pxh": null,
  "pxi": null,
  "pxm": {
    "count": "single",
    "typeId": "prm",
  },
  "pxr": null,
  "pxw": null,
}
`;

exports[`vérifie si une entreprise peut créer un titre de type %p apc 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p aph 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p apm 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p apw 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p arc 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p arg 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p arm 1`] = `true`;

exports[`vérifie si une entreprise peut créer un titre de type %p axm 1`] = `true`;

exports[`vérifie si une entreprise peut créer un titre de type %p cxf 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p cxg 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p cxh 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p cxi 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p cxm 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p cxr 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p cxs 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p cxw 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p inh 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p ini 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p inm 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p inr 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p pcc 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p prf 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p prg 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p prh 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p pri 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p prm 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p prr 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p prs 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p prw 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p pxf 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p pxg 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p pxh 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p pxi 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p pxm 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p pxr 1`] = `false`;

exports[`vérifie si une entreprise peut créer un titre de type %p pxw 1`] = `false`;
